--- a/testmauiproject/MainPage.xaml
+++ b/testmauiproject/MainPage.xaml
@@ -6,30 +6,77 @@
     <ScrollView>
         <VerticalStackLayout
             Padding="30,0"
-            Spacing="25">
-            <Image
-                Source="dotnet_bot.png"
-                HeightRequest="185"
-                Aspect="AspectFit"
-                SemanticProperties.Description="dot net bot in a race car number eight" />
-
+            Spacing="25"
+            BackgroundColor="Black">
+            
             <Label
-                Text="Hello, World!"
+                Text="Welcome to South Park Center Building T!"
                 Style="{StaticResource Headline}"
-                SemanticProperties.HeadingLevel="Level1" />
-
+                HorizontalTextAlignment="Start"
+                SemanticProperties.HeadingLevel="Level1"
+                SemanticProperties.Description="Welcome text." 
+                Scale="2"
+                TranslationY="25"
+                TranslationX="-30"/>
+            
             <Label
-                Text="Welcome to &#10;.NET Multi-platform App UI"
-                Style="{StaticResource SubHeadline}"
-                SemanticProperties.HeadingLevel="Level2"
-                SemanticProperties.Description="Welcome to dot net Multi platform App U I" />
+                Text="Second line here!"
+                Style="{StaticResource Headline}"
+                SemanticProperties.HeadingLevel="Level2" 
+                Scale="2"/>
+
+
 
             <Button
                 x:Name="CounterBtn"
                 Text="Click me" 
-                SemanticProperties.Hint="Counts the number of times you click"
-                Clicked="OnCounterClicked"
-                HorizontalOptions="Fill" />
+                SemanticProperties.Hint="Navigates to a different page."
+                Clicked="OnNavigateButtonClicked"
+                HorizontalOptions="Fill" 
+                Scale="0.8" 
+                TranslationY="0"
+                TranslationX="-150"
+                />
+            <Button
+                x:Name="CounterBtn1"
+                Text="Click me" 
+                SemanticProperties.Hint="Navigates to a different page."
+                Clicked="OnNavigateButtonClicked"
+                HorizontalOptions="Fill" 
+                Scale="0.8" 
+                TranslationY="50"
+                TranslationX="-50"
+                />
+            <Button
+                x:Name="CounterBtn2"
+                Text="Click me" 
+                SemanticProperties.Hint="Navigates to a different page."
+                Clicked="OnNavigateButtonClicked"
+                HorizontalOptions="Fill" 
+                Scale="0.8" 
+                TranslationY="100"
+                TranslationX="50"
+                />
+            <Button
+                x:Name="CounterBtn3"
+                Text="Click me" 
+                SemanticProperties.Hint="Navigates to a different page."
+                Clicked="OnNavigateButtonClicked"
+                HorizontalOptions="Fill" 
+                Scale="0.8"
+                TranslationY="150"
+                TranslationX="-120"
+                />
+            <Button
+                x:Name="CounterBtn4"
+                Text="Click me" 
+                SemanticProperties.Hint="Navigates to a different page."
+                Clicked="OnNavigateButtonClicked"
+                HorizontalOptions="Fill" 
+                Scale="0.8" 
+                TranslationY="200"
+                TranslationX="-170"
+                />
         </VerticalStackLayout>
     </ScrollView>
 
